[feat] Created controller for /road and /road/{name} endpoints.
