# src/Entity/Road.php
@@ -2,6 +2,9 @@
 
 namespace App\Entity;
 
+use App\Entity\Event\Roadwork;
+use App\Entity\Event\TrafficJam;
+use Doctrine\Common\Collections\Collection;
 use Doctrine\ORM\Mapping as ORM;
 
 /**
@@ -25,11 +28,62 @@ class Road
     private string $name;
 
     /**
+     * @ORM\OneToMany(targetEntity="App\Entity\Event\TrafficJam", mappedBy="road")
+     *
+     * @var TrafficJam[]|Collection
+     */
+    private Collection $trafficJams;
+
+    /**
+     * @ORM\OneToMany(targetEntity="App\Entity\Event\Roadwork", mappedBy="road")
+     *
+     * @var Roadwork[]|Collection
+     */
+    private Collection $roadworks;
+
+    /**
+     * @var array TODO radars aren't saved yet.
+     */
+    private array $radars = [];
+
+    /**
      * Road constructor.
      */
     public function __construct(
         string $name
     ) {
         $this->name = $name;
+    }
+
+    /**
+     * @return string
+     */
+    public function getName(): string
+    {
+        return $this->name;
+    }
+
+    /**
+     * @return TrafficJam[]|Collection
+     */
+    public function getTrafficJams(): Collection
+    {
+        return $this->trafficJams;
+    }
+
+    /**
+     * @return Roadwork[]|Collection
+     */
+    public function getRoadworks(): Collection
+    {
+        return $this->roadworks;
+    }
+
+    /**
+     * @return array
+     */
+    public function getRadars(): array
+    {
+        return $this->radars;
     }
 }
